fix textarea line-height, add special cta gap for empty application list

--- a/src/components/textarea/index.module.css
+++ b/src/components/textarea/index.module.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     font-size: 16px;
-    line-height: 25px;
+    line-height: 24px;
     padding: 11px 5px;
     resize: none;
 
